fix: redeem token

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "cookies-next": "^2.1.1",
     "cors": "^2.8.5",
     "daisyui": "^2.50.1",
+    "deno": "^0.1.1",
     "fs": "^0.0.1-security",
     "git": "^0.1.5",
+    "lucid-cardano": "^0.10.6",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.0.3",
     "next": "^13.0.0",
