--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/milestone-sc/index.js", "pages/milestone-sc/index.js", "pages/milestone-sc/seed.js"],
   "exclude": ["node_modules"]
 }
